<resources>
    <string name="app_name">MAD Meditation</string>
    <string name="hello">ПРИВЕТ</string>
    <string name="greeting">Наслаждайся отборочными.\nБудь внимателен.\nДелай хорошо.</string>
    <string name="login">Войти в аккаунт</string>
    <string name="notexist">Еще нет аккаунта? <b>Зарегистрируйтесь</b> </string>
    <string name="signin">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="register">Register</string>
    <string name="profile">Профиль</string>
    <string name="howYouFeeling">Каким ты себя ощущаешь сегодня?</string>
    <string name="about">подробнее</string>
    <string name="images">Images</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>